--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-lottie": "^1.2.10",
+    "swiper": "^11.2.5",
     "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
